--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=tutoria apoyo academico
 server.servlet.context-path=/api/v1.1
 
 ##CONFIGURACION POSTGRE
-spring.datasource.url=jdbc:postgresql://localhost:5433/MentoringSystem-bd
+spring.datasource.url=jdbc:postgresql://localhost:5432/tutoria-db
 spring.datasource.username=postgres
-spring.datasource.password=ADMIN
+spring.datasource.password=admin
 
 #Configuracion de JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
