--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.application.name=tutoria apoyo academico
-server.servlet.context-path=/api/v1.1
+spring.application.name=tutoriaApoyoAcademico
 
 ##CONFIGURACION POSTGRE
 spring.datasource.url=jdbc:postgresql://localhost:5432/tutoria-db
@@ -20,7 +19,9 @@ spring.sql.init.data-locations=classpath:data-test.sql
 #MAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mentoringsystem6@gmail.com
-spring.mail.password=fvrm pwsa ewtg yaul
+spring.mail.username=systemmentoria@gmail.com
+spring.mail.password=la_mejor_mentoria123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.debug=true
